# tlsr_zigbee_sdk_cmake

./: .cproject  .gitignore  .project  CMakeLists.txt  build.ps1  readme.md
apps/bootLoader/: board_8278_evk.h  board_b92_dongle.h  board_ml7218d_mercury.h  board_tl321x_evk.h  board_tl721x_dongle.h  board_tl721x_evk.h
apps/common/: main.c
apps/sampleContactSensor/: app_cfg.h  app_ui.c  board_826x_dongle.h  board_8278_evk.h  board_b91_dongle.h  sampleSensor.c  stack_cfg.h
apps/sampleGW/: app_ui.c  board_8258_evk_v1p2.h  board_826x_evk.h  board_8278_evk.h  board_tl321x_evk.h  board_tl721x_evk.h  sampleGateway.c  sampleGateway.h  version_cfg.h
apps/sampleLight/: zb_afTestCb.c
apps/sampleSwitch/: app_ui.c  board_8258_dongle.h  sampleSwitchEpCfg.c  version_cfg.h
cmake/: CMakeLists.txt  config.cmake  functions.cmake  link.cmake  toolchain.cmake  toolchain_tc32.cmake
platform/: platform.h
platform/services/b85m/: irq_handler.c
platform/services/b91/: irq_handler.c  plic_isr.c
platform/services/tl721x/: plic_isr.c
platform/tc32/: firmware_encrypt.h
proj/common/: bit.h  compiler.h  list.c  macro_trick.h  ringbuffer.h  static_assert.h  tlPrintf.c
proj/drivers/: drv_adc.h  drv_console.h  drv_flash.c  drv_hw.c  drv_hw.h  drv_i2c.h  drv_nv.c  drv_security.h  drv_usb.h
proj/drivers/usb/: usb.c  usbdesc.c  usbdesc.h
proj/os/: ev.c  ev.h  ev_buffer.c  ev_poll.c  ev_poll.h  ev_rtc.c  ev_rtc.h  ev_timer.c
project/: CMakeLists.txt
project/common/: factory_reset.c  firmwareEncryptChk.h
project/sampleLight/: app_cfg.h  app_ui.c  app_ui.h  board_8258_dongle.h  board_8258_evk_v1p2.h  board_826x_dongle.h  board_826x_evk.h  board_8278_dongle.h  board_b91_dongle.h  board_b91_evk.h  board_b92_dongle.h  board_b92_evk.h  board_tl321x_dongle.h  board_tl321x_evk.h  board_tl721x_dongle.h  board_tl721x_evk.h  sampleLight.c  stack_cfg.h  zb_appCb.c  zcl_colorCtrlCb.c  zcl_levelCb.c  zcl_onOffCb.c  zcl_sampleLightCb.c  zcl_sceneCb.c
tl_zigbee_sdk/apps/bootLoader/: board_8278_dongle.h  board_b91_dongle.h  board_b91_evk.h  board_b92_evk.h  board_ml7218a_gaia.h  board_tl321x_dongle.h  bootloader.h
tl_zigbee_sdk/apps/common/: comm_cfg.h  factory_reset.h  firmwareEncryptChk.c  module_test.c
tl_zigbee_sdk/apps/sampleContactSensor/: board_8258_evk_v1p2.h  board_826x_dongle_pa.h  board_8278_dongle.h  board_tl721x_evk.h  sampleSensor.h  sampleSensorEpCfg.c  version_cfg.h  zb_appCb.c  zcl_sampleSensorCb.c
tl_zigbee_sdk/apps/sampleGW/: app_cfg.h  app_ui.h  board_8258_dongle.h  board_826x_dongle.h  board_826x_dongle_pa.h  board_8278_dongle.h  board_b91_dongle.h  board_b91_evk.h  board_b92_dongle.h  board_b92_evk.h  board_tl321x_dongle.h  board_tl721x_dongle.h  sampleGatewayEpCfg.c  zb_afTestCb.c  zb_appCb.c  zcl_sampleGatewayCb.c
tl_zigbee_sdk/apps/sampleLight/: board_8278_evk.h  board_ml7218a_gaia.h  board_ml7218d_mercury.h  sampleLightCtrl.c  sampleLightEpCfg.c  version_cfg.h
tl_zigbee_sdk/apps/sampleSwitch/: app_cfg.h  app_ui.h  board_8258_evk_v1p2.h  board_826x_dongle_pa.h  board_826x_evk.h  board_b91_evk.h  board_b92_dongle.h  board_b92_evk.h  board_tl321x_dongle.h  board_tl321x_evk.h  board_tl721x_dongle.h  sampleSwitch.c  sampleSwitch.h  stack_cfg.h  zb_appCb.c  zcl_sampleSwitchCb.c
tl_zigbee_sdk/platform/boot/: link_cfg.S
tl_zigbee_sdk/platform/chip_8258/: flash.c
tl_zigbee_sdk/platform/chip_b91/: npe.h
tl_zigbee_sdk/platform/riscv/: firmware_encrypt.h
tl_zigbee_sdk/proj/: tl_common.h
tl_zigbee_sdk/proj/common/: assert.h  list.h  mempool.c  mempool.h  ringbuffer.c  string.c  string.h  tlPrintf.h  types.h  utility.c  utility.h  utlist.h
tl_zigbee_sdk/proj/drivers/: drv_adc.c  drv_calibration.c  drv_calibration.h  drv_console.c  drv_flash.h  drv_gpio.c  drv_gpio.h  drv_i2c.c  drv_keyboard.c  drv_keyboard.h  drv_nv.h  drv_pm.c  drv_pm.h  drv_putchar.c  drv_putchar.h  drv_pwm.c  drv_pwm.h  drv_radio.h  drv_security.c  drv_spi.c  drv_spi.h  drv_timer.c  drv_timer.h  drv_uart.c  drv_uart.h
tl_zigbee_sdk/proj/os/: ev_buffer.h  ev_queue.c  ev_queue.h  ev_timer.h
tl_zigbee_sdk/zbhci/: zbhci.h
tl_zigbee_sdk/zbhci/uart/: hci_uart.c
tl_zigbee_sdk/zbhci/usbCDC/: zbhci_usb_cdc.c
tl_zigbee_sdk/zbhci/usbHID/: zbhci_usb_hid.c
tl_zigbee_sdk/zigbee/aps/: aps_api.h  aps_group.c
tl_zigbee_sdk/zigbee/bdb/: bdb.c
tl_zigbee_sdk/zigbee/common/: zb_version.c
tl_zigbee_sdk/zigbee/gp/: gpEpCfg.c  gp_base.h  gp_proxy.c  gp_proxy.h  gp_sec.h  gp_transCfg.c
tl_zigbee_sdk/zigbee/mac/: mac_phy.c
tl_zigbee_sdk/zigbee/ota/: otaEpCfg.c
tl_zigbee_sdk/zigbee/ss/: security_service.h  ss_nv.c
tl_zigbee_sdk/zigbee/wwah/: wwahEpCfg.c
tl_zigbee_sdk/zigbee/zbapi/: zb_api.h
tl_zigbee_sdk/zigbee/zcl/: zcl_config.h  zcl_nv.h  zcl_reporting.c
tl_zigbee_sdk/zigbee/zdo/: zdp.c
toolchain/tc32/tools/: tdebug.lst  wpcdb.ini  wt_hamster.ini  wt_light.ini  wtcdb.ini
tools/: tl_check_fw.sh
tools/telink_script/: tl_check_fw.sh
zbhci/: zbhci.c  zbhciCmdProcess.c  zbhci_zclHandler.c
zbhci/usbPrint/: hci_usbPrint.c
zigbee/af/: zb_af.c  zb_af.h
zigbee/common/: zb_config.c
zigbee/common/includes/: zb_buffer.h  zb_common.h  zb_list.h  zb_task_queue.h
zigbee/gp/: cGP_stub.h  dGP_stub.h  gp.c  gp.h  gp_proxyTab.c  gp_trans.c  gp_trans.h
zigbee/mac/: mac_pib.c
zigbee/mac/includes/: mac_trx_api.h
zigbee/nwk/includes/: nwk.h  nwk_neighbor.h  nwk_nib.h
zigbee/ota/: ota.c  ota.h
zigbee/wwah/: wwah.c  wwah.h
zigbee/zcl/: zcl.c  zcl.h  zcl_const.h  zcl_include.h  zcl_nv.c
zigbee/zcl/closures/: zcl_door_lock.c  zcl_door_lock_attr.c  zcl_window_covering.c
zigbee/zcl/general/: zcl_alarm.c  zcl_basic.c  zcl_binary_input.c  zcl_binary_output.h  zcl_binary_output_attr.c  zcl_devTemperatureCfg.h  zcl_devTemperatureCfg_attr.c  zcl_diagnostics.c  zcl_greenPower_attr.c  zcl_group.c  zcl_group.h  zcl_group_attr.c  zcl_identify.c  zcl_level.h  zcl_multistate_input.c  zcl_multistate_input_attr.c  zcl_multistate_output.c  zcl_onoff.h  zcl_onoff_attr.c  zcl_pollCtrl.h  zcl_pollCtrl_attr.c  zcl_powerCfg_attr.c  zcl_time.c  zcl_time.h
zigbee/zdo/: zdo_api.h  zdp.h
(+157 files in other folders)
